fix: mise à jour design formulaire

--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -91,7 +91,7 @@
             display: block;
             text-align: center;
             margin-top: 20px;
-            color: #fdd835;
+            color: #151511;
             text-decoration: none;
             font-weight: bold;
         }
@@ -126,7 +126,7 @@
 </head>
 <body>
     <form action="/generer" method="post" id="formulaireIA">
-        <h1>Formulaire personnalisé 🧠</h1>
+        <h1>Formulaire personnalisé </h1>
 
         <!-- Étape 1 -->
         <div class="step active">
@@ -223,14 +223,13 @@
 
         <!-- Étape 4 -->
         <div class="step">
-            <h2>🎯 Tu es prêt pour le progrès !</h2>
+            <h2> Tu es prêt pour le progrès !</h2>
             <p style="text-align:center; line-height: 1.6;">
-                Parfait, il faut maintenant que tu saches une chose !<br><br>
-                Ce formulaire est une base pour générer tes premiers programmes.<br>
+                Parfait ! Ce formulaire permet à ton coach de bien te connaitre et sera une base pour générer tes premiers programmes.<br>
                 Pour aller encore plus loin, pense à utiliser la page <strong>“Parler à mon coach”</strong> :<br>
                 tu peux y partager tes ressentis, poser tes questions ou demander des ajustements.<br><br>
                 Ton ressenti te sera d’ailleurs demandé chaque semaine et influencera les programmes suivants.<br><br>
-                En bref, ton coach IA va vraiment t’accompagner semaine après semaine 🧠💪
+                En bref, ton coach IA va vraiment t’accompagner semaine après semaine 💪
             </p>
         </div>
 
