--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
         <a href="/training">Consulter</a>
       </div>
       <div class="card">
-        <h2>💬 Parler à mon coach</h2>
+        <h2> Parler à mon coach</h2>
         <a href="/coach">Ouvrir</a>
       </div>
     </div>
