--- a/templates/training.html
+++ b/templates/training.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ton programme d'entraînement personnalisé 🏋️</h1>
+        <h1>Ton programme d'entraînement personnalisé </h1>
         <div class="training-content">
             <div>{{ training | safe }}</div>
         </div>
