--- a/templates/liste.html
+++ b/templates/liste.html
@@ -2,9 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>🛒 Liste de courses</title>
+    <title> Liste de courses</title>
     <link rel="stylesheet" href="/static/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 
     <style>
         body {
@@ -13,14 +13,14 @@
         }
 
         .container {
-            background-color: rgba(0, 0, 0, 0.8); /* assombri le fond pour lisibilité */
+            background-color: rgba(66, 52, 52, 0.8); /* assombri le fond pour lisibilité */
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+            box-shadow: 0 0 25px rgba(253, 252, 252, 0.6);
         }
 
         .liste-content {
-            color: #fdd835; /* jaune clair lisible sur fond sombre */
+            color: #0e0d0d; /* jaune clair lisible sur fond sombre */
         }
     </style>
 </head>
