chore: mise à jour du contenu et amélioration du style

--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -176,7 +176,7 @@
                 <option value="non">Non</option>
             </select>
 
-            <label for="reussi">Si oui, as-tu réussi ?</label>
+            <label for="reussi">Si oui, avais-tu réussi ?</label>
             <select name="reussi">
                 <option value="oui">Oui</option>
                 <option value="non">Non</option>
@@ -223,7 +223,6 @@
 
         <!-- Étape 4 -->
         <div class="step">
-            <h2> Tu es prêt pour le progrès !</h2>
             <p style="text-align:center; line-height: 1.6;">
                 Parfait ! Ce formulaire permet à ton coach de bien te connaitre et sera une base pour générer tes premiers programmes.<br>
                 Pour aller encore plus loin, pense à utiliser la page <strong>“Parler à mon coach”</strong> :<br>
