test: essais et ajustements mineurs

--- a/templates/liste.html
+++ b/templates/liste.html
@@ -13,14 +13,14 @@
         }
 
         .container {
-            background-color: rgba(66, 52, 52, 0.8); /* assombri le fond pour lisibilité */
+            background-color: rgba(253, 252, 252, 0.8); /* assombri le fond pour lisibilité */
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 0 25px rgba(253, 252, 252, 0.6);
         }
 
         .liste-content {
-            color: #0e0d0d; /* jaune clair lisible sur fond sombre */
+            color: #131313; /* jaune clair lisible sur fond sombre */
         }
     </style>
 </head>
