--- a/templates/liste.html
+++ b/templates/liste.html
@@ -8,15 +8,15 @@
 
     <style>
         body {
-            background: url("/static/food.png") no-repeat center center fixed;
+            background: url("/static/foo.png") no-repeat center center fixed;
             background-size: cover;
         }
 
         .container {
-            background-color: rgba(253, 252, 252, 0.8); /* assombri le fond pour lisibilité */
+            background-color: rgba(251, 247, 247, 0.8); /* assombri le fond pour lisibilité */
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 0 25px rgba(253, 252, 252, 0.6);
+            box-shadow: 0 0 25px rgba(66, 59, 59, 0.468);
         }
 
         .liste-content {
