--- a/templates/liste.html
+++ b/templates/liste.html
@@ -13,10 +13,10 @@
         }
 
         .container {
-            background-color: rgba(251, 247, 247, 0.8); /* assombri le fond pour lisibilité */
+            background-color: rgba(76, 59, 59, 0.8); /* assombri le fond pour lisibilité */
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 0 25px rgba(66, 59, 59, 0.468);
+            box-shadow: 0 0 25px rgb(248, 247, 247);
         }
 
         .liste-content {
