maj site avec background bib.png

--- a/templates/liste.html
+++ b/templates/liste.html
@@ -20,7 +20,7 @@
         }
 
         .liste-content {
-            color: #131313; /* jaune clair lisible sur fond sombre */
+            color: #f1e7e7; /* jaune clair lisible sur fond sombre */
         }
     </style>
 </head>
