--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Créer un compte</title>
     <link rel="stylesheet" href="/static/style.css">
+    <style>
+        body {
+            background-image: url('/static/bib.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
