--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,9 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1e1e1e, #2a2a2a);
+      background: linear-gradient(135deg, #1e1e1e, #2a2a2a),
+                  url('/static/bib.png') no-repeat center center;
+      background-size: cover;
       color: #fdd835;
       display: flex;
       justify-content: center;
@@ -111,4 +113,5 @@
   </div>
 </body>
 </html>
+
 
