--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
       padding: 0;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #1e1e1e, #2a2a2a),
-                  url('/static/bib.png') no-repeat center center;
+                  url('/static/bi.png') no-repeat center center;
       background-size: cover;
       color: #fdd835;
       display: flex;
