--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static/style.css">
     <style>
         body {
-            background-image: url('/static/bib.png');
+            background-image: url('/static/bi.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
