--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(135deg, #1e1e1e, #2a2a2a),
-                        url('/static/bib.png') no-repeat center center;
+                        url('/static/bi.png') no-repeat center center;
             background-size: cover;
             font-family: sans-serif;
         }
