fix: mise à jour interface login

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,8 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1e1e1e, #2a2a2a),
-                  url('/static/bi.png') no-repeat center center;
+      background-image: url('/static/bi.png');
       background-size: cover;
       color: #fdd835;
       display: flex;
