--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,8 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #1e1e1e, #2a2a2a),
-                        url('/static/bi.png') no-repeat center center;
+            background-image: url('/static/bi.png');
             background-size: cover;
             font-family: sans-serif;
         }
