feat: ajout des nouveaux fichiers

--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -30,7 +30,7 @@
 
         h1, h2 {
             text-align: center;
-            color: #fff176;
+            color: #0e0e0d;
         }
 
         label {
