fix: centrage vertical + fond plein écran sur formulaire

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,11 +5,19 @@
     <title>Créer un compte</title>
     <link rel="stylesheet" href="/static/style.css">
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
         body {
             background-image: url('/static/bi.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
