update: différentes modifications sur le site

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -48,8 +48,8 @@
 <body>
     <div class="center-box">
         <h1>Bienvenue !</h1>
-        <a href="/login">🔐 Me connecter</a>
-        <a href="/register">🆕 Créer un compte</a>
+        <a href="/login"> Me connecter</a>
+        <a href="/register"> Créer un compte</a>
     </div>
 </body>
 </html>
