update: différentes modifications sur le site

--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -120,10 +120,11 @@
     </div>
 
     <div class="slide" id="slide4">
-      <h2>⚠️ Disclaimer</h2>
-      <p>Cet outil est généré par intelligence artificielle et fourni à titre informatif. 
-      Il ne remplace en aucun cas un avis médical, un suivi diététique ou un accompagnement par un professionnel de santé diplômé.<br><br>
-      En continuant, vous reconnaissez être seul responsable de vos choix alimentaires et sportifs.</p>
+      <h2>⚠️ Conditions d'utilisation</h2>
+      <p>Cet outil est basé sur l'intelligence artificielle et est fourni à titre informatif. 
+      L'IA est un outil ultra performant, ce qui se fait de mieux, et on peut aujourd'hui lui faire confiance mais ...
+      cela ne remplace en aucun cas un avis médical,un coaching,  un suivi diététique ou un accompagnement par un professionnel de santé diplômé.<br><br>
+      En continuant, vous reconnaissez que cet outil est seulement informatif et être le seul responsable de vos choix alimentaires et sportifs.</p>
       <label style="font-size:1.1em; color:#eeeeee;">
         <input type="checkbox" id="acceptDisclaimer"> J’ai lu et j’accepte les conditions d’utilisation
       </label>
