--- a/templates/planning.html
+++ b/templates/planning.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <h1> Voici ton programme généré par l’IA. Si un jour ne te convient pas, régenère le ou dis le à ton coach IA !</h1>
+        <h1> Voici ton programme généré par l’IA. Si un jour ne te convient pas, régenère le ou dis le à ton asssistant IA !</h1>
        
         {% for jour, contenu in plannings.items() %}
             <div class="day-block">
