update: différentes modifications sur le site

--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -130,11 +130,12 @@
 
         <!-- Étape 0 (nouvelle) -->
         <div class="step active">
-            <h2>Pourquoi ces données ?</h2>
+            <h2>Première étape</h2>
             <p style="line-height:1.7; text-align:center; color:#eeeeee;">
-                Ces informations sont essentielles pour que l’IA puisse générer un programme adapté à ton profil.<br><br>
-                Elles permettent de mieux comprendre ton corps, ton quotidien et tes objectifs afin de créer un planning réaliste et efficace.<br><br>
-                🔒 Tes données restent confidentielles et servent uniquement à personnaliser ton expérience sur Training.AI.
+                L'efficacité d'un programme dépend principalement d'une seule chose: l'adaptation !<br><br>
+                Nous sommes tous différents, il ne peut donc pas y avoir deux programmes identiques, pour maximiser tes résultats il te faut un programme pour toi et toi seul
+                Le formulaire qui va suivre permet de mieux comprendre ton corps, ton quotidien et tes objectifs afin de créer un assistant réaliste et efficace et surtout tenable sur le long terme car l'adhérence est reine !<br><br>
+                🔒 Tes données restent confidentielles et servent uniquement à personnaliser ton expérience sur Training.AI., elles ne sont accessibles à personne et hébergées de façon sécurisée
             </p>
         </div>
 
