update: modifications multiples sur le projet

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
 
     <div class="button-grid">
       <div class="card">
-        <h2>Remplir le formulaire</h2>
+        <h2>Etape 1: ton profil</h2>
         <a href="/formulaire">Accéder</a>
       </div>
       <div class="card">
